--- a/admin/admin.css
+++ b/admin/admin.css
@@ -15,3 +15,20 @@ li {
 	list-style-type: disc;
 	margin-left: 1.5em;
 }
+
+.center-text {
+	text-align: center;
+}
+
+.width85 {
+	width: 85px;
+}
+.width280 {
+	width: 280px;
+}
+.width450 {
+	width: 450px;
+}
+.maxwidth1000 {
+	max-width: 1000px;
+}
